--- a/.github/workflows/update_blog.yml
+++ b/.github/workflows/update_blog.yml
@@ -6,7 +6,7 @@ on:
       branches:
         - master  # 또는 워크플로우를 트리거하고 싶은 브랜치 이름
   schedule:
-    - cron: '0 0 * * *'  # 매일 자정에 실행
+    - cron: '0 15 * * *'  # 한국 시간 기준 00:00에 실행
 
 jobs:
   update_blog:
